# chimedb_di

./: .gitattributes  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yaml  main.yaml  test.yaml
chimedb/data_index/: __init__.py  _version.py  orm.py  util.py
test/: conftest.py  test_util.py
